deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ctse
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-management-deployment
  namespace: ctse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart-management
  template:
    metadata:
      labels:
        app: cart-management
    spec:
      containers:
        - name: cart-management
          image: jayanisaumya/cart-management:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "2Gi"
              cpu: "1000m"
          ports:
            - containerPort: 3006
---
