service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: ctse
  name: cart-management-service
spec:
  selector:
    app: cart-management
  ports:
    - protocol: TCP
      port: 3006
      targetPort: 3006
  type: LoadBalancer
  publishNotReadyAddresses: true
