ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  namespace: ctse
 
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /api/products
        pathType: Prefix
        backend:
          service:
            name: product-management-service
            port:
              number: 3000
      - path: /api/orders
        pathType: Prefix
        backend:
          service:
            name: order-management-service
            port:
              number: 3001
      - path: /api/brands
        pathType: Prefix
        backend:
          service:
            name: brand-management-service
            port:
              number: 3007
      - path: /api/carts
        pathType: Prefix
        backend:
          service:
            name: cart-management-service
            port:
              number: 3006
